--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10-dars</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Nunito+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -14,12 +15,46 @@
       <img src="img/Logo.png" alt="logo" width="49" height="35">
     </a>
     <ul class="currencies">
-      <li class="currency">About</li>
+      <li class="currency active">About</li>
       <li class="currency">Help</li>
       <li class="currency">Features</li>
       <li class="currency">Signup</li>
     </ul>
+    <a href="#" class="link" target="blank">
+      <p class="link-text">Request demo</p> <img src="img/strelka.png" alt="strelka">
+    </a>
   </div>
+
+
+  <div class="site-header">
+    <div class="intro-text">
+      <h1 class="intro-title">Save your data storage here.</h1>
+      <p class="intro-paragraph">Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.
+      </p>
+      <a href="#" class="button-link">Learn more</a>
+    </div>
+    <div class="intro-img">
+      <img class="illustration" src="img/intro-img.png" alt="illutration" width="885" height="468">
+    </div>
+  </div>
+ <div class="box">
+
+  <div class="illustration-img">
+    <img src="img/illustration2.png" alt="illustration" width="477" height="504">
+  </div>
+
+  <div class="paragraph">
+    <h2>We are a high-level data storage bank</h2>
+    <p class="main-paragraph">
+      The place to store various data that you can access at any time through the internet  and where you can carry it.This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse.
+    </p>
+  </div>
+ </div>
+
+
+
+
 </div>
+
 </body>
 </html>
